force-app/main/default/objects/Child_Evaluations__c/Child_Evaluations__c.object-meta.xml
<CustomObject>
    <label>Child Evaluation</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Child Evaluations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>