force-app/main/default/objects/Child_Evaluations__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <label>Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>