force-app/main/default/objects/Child_Evaluations__c/fields/Child_Discipline__c.field-meta.xml
<CustomField>
    <fullName>Child_Discipline__c</fullName>
    <label>Discipline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>