force-app/main/default/objects/Child_Evaluations__c/fields/Child_Exp_of_being_protected_nurtured__c.field-meta.xml
<CustomField>
    <fullName>Child_Exp_of_being_protected_nurtured__c</fullName>
    <inlineHelpText>1. Experience of being protected/nurtured Description.</inlineHelpText>
    <label>1.Experience of being protected/nurtured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>