force-app/main/default/objects/Child_Evaluations__c/fields/Child_Physical_and_mental_health__c.field-meta.xml
<CustomField>
    <fullName>Child_Physical_and_mental_health__c</fullName>
    <label>Physical and mental health</label>
    <length>255</length>
    <type>Text</type>
</CustomField>