force-app/main/default/objects/Child_Evaluations__c/fields/Child_s_feeling_regarding_adoption__c.field-meta.xml
<CustomField>
    <fullName>Child_s_feeling_regarding_adoption__c</fullName>
    <inlineHelpText>6. Child&apos;s feeling regarding adoption and/or foster care.</inlineHelpText>
    <label>6. Child&apos;s feeling regarding adoption</label>
    <type>TextArea</type>
</CustomField>