force-app/main/default/objects/Child_Evaluations__c/fields/Connections_outside_the_family__c.field-meta.xml
<CustomField>
    <fullName>Connections_outside_the_family__c</fullName>
    <inlineHelpText>5. Connections outside the family (School, Friends) Description.</inlineHelpText>
    <label>5. Connections outside the family</label>
    <type>TextArea</type>
</CustomField>