force-app/main/default/objects/Child_Evaluations__c/fields/Evalution_Verified__c.field-meta.xml
<CustomField>
    <fullName>Evalution_Verified__c</fullName>
    <formula>Parents_and_or_caregivers__c   != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the Physical and mental health.</inlineHelpText>
    <label>Verified(Filled Parents and/ caregiver)</label>
    <type>Checkbox</type>
</CustomField>