force-app/main/default/objects/Child_Evaluations__c/fields/Experience_have_development_education__c.field-meta.xml
<CustomField>
    <fullName>Experience_have_development_education__c</fullName>
    <inlineHelpText>2c. Experience having developmental needs met - Education.</inlineHelpText>
    <label>2c.Experience have development education</label>
    <type>TextArea</type>
</CustomField>