force-app/main/default/objects/Child_Evaluations__c/fields/Experience_have_development_physical__c.field-meta.xml
<CustomField>
    <fullName>Experience_have_development_physical__c</fullName>
    <inlineHelpText>2b. Experience having developmental needs met - Physical and mental health.</inlineHelpText>
    <label>2b.Experience have development physical</label>
    <type>TextArea</type>
</CustomField>