force-app/main/default/objects/Child_Evaluations__c/fields/Experience_having_development_discipline__c.field-meta.xml
<CustomField>
    <fullName>Experience_having_development_discipline__c</fullName>
    <inlineHelpText>2a. Experience having developmental needs met - discipline description.</inlineHelpText>
    <label>2a. Experience development discipline</label>
    <type>TextArea</type>
</CustomField>