force-app/main/default/objects/Child_Evaluations__c/fields/Experience_of_attachment_separation__c.field-meta.xml
<CustomField>
    <fullName>Experience_of_attachment_separation__c</fullName>
    <inlineHelpText>3. Experience of attachment, separation and loss description.</inlineHelpText>
    <label>3. Experience of attachment, separation</label>
    <type>TextArea</type>
</CustomField>