force-app/main/default/objects/Child_Evaluations__c/fields/Information_Verified__c.field-meta.xml
<CustomField>
    <fullName>Information_Verified__c</fullName>
    <formula>Child__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the child value.</inlineHelpText>
    <label>Verified(Filled child)</label>
    <type>Checkbox</type>
</CustomField>