force-app/main/default/objects/Child_Evaluations__c/fields/Parents_and_or_caregivers__c.field-meta.xml
<CustomField>
    <fullName>Parents_and_or_caregivers__c</fullName>
    <inlineHelpText>4a. Relationship of this child with primary family - Parents and/or caregivers description.</inlineHelpText>
    <label>4a. Parents and/or caregivers</label>
    <type>TextArea</type>
</CustomField>