force-app/main/default/objects/Child_Evaluations__c/fields/Siblings_or_Other_Children__c.field-meta.xml
<CustomField>
    <fullName>Siblings_or_Other_Children__c</fullName>
    <inlineHelpText>4b. Relationship of this child with primary family - Siblings or other children in the household.</inlineHelpText>
    <label>4b. Siblings or Other Children</label>
    <type>TextArea</type>
</CustomField>